Changed to 5 on xl screens for project, justify one p on mobile, mobile menu pic fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -249,9 +249,9 @@ main {
 
 @media screen and (min-width: 1171px) {
   #projectsGrid {
-    grid-template-columns: repeat(4, 1fr); } }
+    grid-template-columns: repeat(5, 1fr); } }
 
-@media screen and (max-width: 500px) and (max-width: 1170px) {
+@media screen and (min-width: 769px) and (max-width: 1170px) {
   #projectsGrid {
     grid-template-columns: repeat(4, 1fr); } }
 
@@ -277,7 +277,7 @@ main {
     height: 25vh;
     transform: translate3d(100%, 0, 0); }
     .menu-branding .portrait {
-      background-image: url("../images/profilePic1.jpg");
+      background-image: url("../images/bw_self_portrait.jpg");
       width: 150px;
       height: 150px; }
   #projectsGrid {
@@ -297,7 +297,9 @@ main {
     width: 100%;
     font-size: inherit; }
   .lg-heading {
-    font-size: 3rem; } }
+    font-size: 3rem; }
+  #bioDesc {
+    text-align: justify; } }
 
 @media screen and (max-width: 385px) {
   #projects {
