--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -48,7 +48,7 @@ $bg-opacity: 0.7;
     }
 }
 @mixin mediaLg {
-    @media screen and (max-width: 500px) and
+    @media screen and (min-width: 769px) and
     (max-width: 1170px) {
         @content;
     }
