--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -3,7 +3,7 @@
 // Widescreen
 @include mediaXL{
     #projectsGrid{
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(5, 1fr);
     }
 }
 
@@ -47,7 +47,7 @@
         transform: translate3d(100%,0,0);
 
         .portrait{
-            background-image: url("../images/profilePic1.jpg");
+            background-image: url("../images/bw_self_portrait.jpg");
             width: 150px;
             height: 150px;
         }
@@ -79,6 +79,10 @@
 
     .lg-heading{
         font-size: 3rem;
+    }
+
+    #bioDesc{
+        text-align: justify;
     }
 }
 
